STARFISH1-1 Deleted the Surefire report plugin